--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,78 +2,70 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-top: 10px;
+  background-color: #C0C0C0;
+  padding: 30px;
+  margin: 0px;
+  color: white;
+  font-family: 'Lato', Calibri, Arial, sans-serif;
+  font-size: 90%;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+
+@font-face {
+  font-family: 'my-icons';
+  src:url('fonts/my-icons.eot?wxs9c7');
+  src:url('fonts/my-icons.eot?#iefixwxs9c7') format('embedded-opentype'),
+    url('fonts/my-icons.woff?wxs9c7') format('woff'),
+    url('fonts/my-icons.ttf?wxs9c7') format('truetype'),
+    url('fonts/my-icons.svg?wxs9c7#my-icons') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'my-icons';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  font-size: 12px;
+  color: #fff ;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
+
+.container{
+  width: 1024px;
+  margin: auto;
+  border: solid 1px red;
+
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+.menu-container{
+  width: 100%;
+  height: 70px;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
+.mydropdown{
+  width: 150px;
+  border: solid 1px green;
+  height: 40px;
+  float: left;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.dropdown-items-container{
+  float: right;
+  width: 860px;
+  height: 50px;
+  border: solid 1px red;
 }
+
+
+
+
+
