--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,6 +22,9 @@ body {
   font-weight: normal;
   font-style: normal;
 }
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
 
 [class^="icon-"], [class*=" icon-"] {
   font-family: 'my-icons';
@@ -53,7 +56,6 @@ body {
 
 .mydropdown{
   width: 150px;
-  border: solid 1px green;
   height: 40px;
   float: left;
 }
@@ -62,8 +64,11 @@ body {
   float: right;
   width: 860px;
   height: 50px;
-  border: solid 1px red;
+ 
 }
+
+
+
 
 
 
