--- a/app/styles/search.css
+++ b/app/styles/search.css
@@ -6,12 +6,13 @@ input[type="search"] {
 }
 
 .search-container{
-	width: 580px;
+	width: 490px;
 	min-height: 400px;
 	overflow: auto;
 	padding: 0px;
 	overflow-y: hidden;
 	color: #2d3956;
+	float: left;
 
 
 }
@@ -83,6 +84,22 @@ input[type="search"] {
 
 
 
+.advanced-search-container{
+	padding: 0;
+	height: 340px;
+	width: 470px;
+	display: block;
+	overflow: auto;
+	border: solid 1px yellow;
+	overflow-y:	hidden;
+	
+}
+.advanced-search-container {
+  -webkit-transition:0.5s linear all;
+  transition:0.5s linear all;
+  opacity:1;
+  height: 330px;
+}
 
 
 .advanced-search-container ul{
@@ -100,8 +117,10 @@ input[type="search"] {
 
 .advanced-search-container section{
 	float: left;
-	width: 250px;
+	width: 230px;
 	overflow: auto;
+	display: inline-block;
+	border: solid 1px red;
 	
 }
 .advanced-search-container h4{
@@ -119,26 +138,12 @@ input[type="search"] {
 }
 
 .search-results{
-	width: 430px;
-	display: block;
+	width: 480px;
 	height: 300px;
-	border: solid 1px green;
+	
+	margin-top: 5px;
 }
 
-.advanced-search-container{
-	padding: 0;
-	height: 340px;
-	overflow: auto;
-	border: solid 1px yellow;
-	overflow-y:	hidden;
-	
-}
-.advanced-search-container {
-  -webkit-transition:0.5s linear all;
-  transition:0.5s linear all;
-  opacity:1;
-  height: 330px;
-}
 
 .advanced-search-container.ng-hide {
   opacity:0;
@@ -152,6 +157,52 @@ input[type="search"] {
   display:block!important;
 
 }
+
+/*
+	Results layout
+*/
+
+.deckgrid[deckgrid]::before {
+    /* Specifies that the grid should have a maximum of 4 columns. Each column will have the classes 'column' and 'column-1-4' */
+    content: '4 .column.column-1-4';
+    font-size: 0; /* See https://github.com/akoenig/angular-deckgrid/issues/14#issuecomment-35728861 */
+    visibility: hidden;
+}
+
+.deckgrid .column {
+    float: left;
+}
+
+.deckgrid .column-1-4 {
+    width: 116px;
+    margin: 0 3px 3px 0;
+
+}
+.a-card{
+	
+	background-color: #66718b;
+	padding: 3px;
+	margin-bottom: 3px;
+	border-radius: 3px;
+	color: white;
+
+}
+.a-card h4{
+	font-weight: normal;
+	margin: 0;
+}
+
+
+.angular-google-map-container{
+	width: 470px;
+	height: 430px;
+	
+	
+}
+
+
+
+
 
 
 
