--- a/app/styles/search.css
+++ b/app/styles/search.css
@@ -142,6 +142,7 @@ input[type="search"] {
 	height: 300px;
 	
 	margin-top: 5px;
+	position: relative;
 }
 
 
@@ -192,7 +193,13 @@ input[type="search"] {
 	margin: 0;
 }
 
-
+.search-preloader{
+	width: 34px;
+	height: 34px;
+	position: absolute;
+	top: 62px;
+	left: 203px;
+}
 
 
 
