Adding modal window

--- a/app/views/templates/deckgrid-card.html
+++ b/app/views/templates/deckgrid-card.html
@@ -1,5 +1,5 @@
 <div class="a-card">
-	<img src="" width="110" data-ng-src="{{card.imageLocation}}">
+	<img src="" ng-click="clickhandler({docID: card.docID})" width="110" data-ng-src="{{card.imageLocation}}">
 
 	<h4>{{card.label}}</h4>
 	
