--- a/app/scripts/common/templates/modal.tpl.html
+++ b/app/scripts/common/templates/modal.tpl.html
@@ -1,1 +1,17 @@
-<div class='md-content'>And here is our content</div>
+<div class='md-content' >
+	<span class="md-icon-close" ng-click="removeModal()"></span>
+	<p class="title">{{title}}</p>
+	<div class="details-modal"  >
+		<div class="image-container">
+			
+			<img  ng-src="{{imageLocation}}" width="280">
+		</div>
+		<div class="metadata-container" scrollbar >
+				<p ng-repeat="key in metadata">
+					<span class="metadata-label">{{key[0]}}</span> : <span class="metadata-content">{{key[1]}}</span>
+				
+				</p>
+			
+		</div>
+	</div>
+</div>
