--- a/app/styles/colors.css
+++ b/app/styles/colors.css
@@ -1,6 +1,7 @@
 /*dark blue: #2d3956
 light blue:#66718b 
 dark gray: #C0C0C0
+even darker grey :#808080;
 light gray: #e7e7e7
 links yellow: #FFCC00
 red: #c0392b, #A5281B
