--- a/app/styles/search.css
+++ b/app/styles/search.css
@@ -44,6 +44,8 @@ input[type="search"] {
 	padding: 0;
 	position: relative;
   z-index: 1;
+  font-size: 14px;
+
 }
 .advanced-search-link a{
 	margin: 0;
@@ -56,7 +58,7 @@ input[type="search"] {
 
 .advanced-search-link a:after{
 	content: "\00BB";
-	font-size: 16px;
+	font-size: 14px;
 	display: inline-block;
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
@@ -186,6 +188,7 @@ input[type="search"] {
 	margin-bottom: 3px;
 	border-radius: 3px;
 	color: white;
+	cursor: pointer;
 
 }
 .a-card h4{
