--- a/app/styles/pagination.css
+++ b/app/styles/pagination.css
@@ -68,6 +68,7 @@
 .pagination ul{
 	display: inline-block;
 	margin: 0;
+	padding: 0;
 	border-radius: 2;
 	box-shadow: 0 1px 1px rgba(0,0,0,0.05);
 }
