--- a/app/scripts/search/templates/search.tpl.html
+++ b/app/scripts/search/templates/search.tpl.html
@@ -1,9 +1,9 @@
 <input type="search" ng-model="query.input" ng-change="change(query)" >
 <a href="#" ng-click="search()"  class="searchButton">SEARCH</a>
 <span class="advanced-search-link">
-	<a href="#" ng-click="searchCtrl.advanced=!searchCtrl.advanced">Advanced Search</a>
+	<a href="#" ng-click="search.advanced=!search.advanced">Advanced Search</a>
 </span>
-<div ng-init="{searchCtrl.init : true}" ng-show="searchCtrl.advanced"   ng-class="{'advanced-search-container': !searchCtrl.init}">
+<div ng-init="{searchl.init : true}" ng-show="search.advanced"   ng-class="{'advanced-search-container': !searchCtrl.init}">
 <!-- <div ng-show="ctrl.model.advanced" class="advanced-search-container ng-hide"> -->
 	<div>
 		<section class="collections">
