Adding collections tool

--- a/app/scripts/search/templates/search.tpl.html
+++ b/app/scripts/search/templates/search.tpl.html
@@ -3,7 +3,7 @@
 <span class="advanced-search-link">
 	<a href="#" ng-click="search.advanced=!search.advanced">Advanced Search</a>
 </span>
-<div ng-init="{searchl.init : true}" ng-show="search.advanced"   ng-class="{'advanced-search-container': !searchCtrl.init}">
+<div  ng-show="search.advanced"    ng-class="{'advanced-search-container': !searchCtrl.init}">
 <!-- <div ng-show="ctrl.model.advanced" class="advanced-search-container ng-hide"> -->
 	<div>
 		<section class="collections">
