--- a/app/styles/colors.css
+++ b/app/styles/colors.css
@@ -2,8 +2,20 @@
 light blue:#66718b 
 dark gray: #C0C0C0
 even darker grey :#808080;
-light gray: #e7e7e7
+light gray: #e7e7e7;
+another grey: #bdbdbd;
 links yellow: #FFCC00
 red: #c0392b, #A5281B
 green: 
-tirkiz: #5ba4a4*/
+tirkiz: #5ba4a4
+three blue colors: 
+#deebf7;
+#9ecae1;
+#3182bd;
+
+three yellow brown:
+#fff7bc;
+#fec44f;
+#d95f0e;
+
+*/
