--- a/app/scripts/deckgrid/template/card.tpl.html
+++ b/app/scripts/deckgrid/template/card.tpl.html
@@ -2,5 +2,7 @@
 	<img src="" ng-click="itemClicked(card.docID)" width="110" data-ng-src="{{card.imageLocation}}">
 
 	<h4>{{card.label}}</h4>
-	
+	<div ng-show="toolsShown" class="tools-icons">
+		<span class="icon-add" ng-click="itemAddedToCollection(card.docID)"></span>
+	</div>
 </div>
