--- a/app/scripts/common/templates/dialog.tpl.html
+++ b/app/scripts/common/templates/dialog.tpl.html
@@ -1,4 +1,4 @@
-<div  ng-class="{true: 'my-dialog question', false: 'my-dialog notification'}[type==='question']" >
+<div  ng-class="{'my-dialog question': type==='question', 'my-dialog notification': type==='notification', 'my-dialog': type==='none'}" >
 	<p>{{text}}</p>
 	<div ng-show="type === 'question'">
 		<a href="#" ng-click="response({option: 'ok'})" class="button">Yes</a>
