--- a/app/styles/search.css
+++ b/app/styles/search.css
@@ -138,7 +138,8 @@ input[type="search"] {
 	height: 20px;
 	line-height: 20px;
 	width: 60px;
-	margin-top: 20px;
+	margin-top: 10px;
+	padding-top: 2px;
 }
 
 .search-results{
