Replacing search service to common module

--- a/app/scripts/statistics/templates/statistics.tpl.html
+++ b/app/scripts/statistics/templates/statistics.tpl.html
@@ -1,5 +1,6 @@
 <div class='statistics-container'>
 	<h3>Repository statistics</h3>
+	<p>Number of objects: <span class="val">1222</span></p>
 	<p>Object types</p>
 	<ul>
 		<li>Images (1000)</li>
