--- a/app/scripts/statistics/templates/statistics.tpl.html
+++ b/app/scripts/statistics/templates/statistics.tpl.html
@@ -1,19 +1,24 @@
 <div class='statistics-container'>
-	<h3>Repository statistics</h3>
-	<p>Number of objects: <span class="val">1222</span></p>
-	<p>Object types</p>
-	<ul>
-		<li>Images (1000)</li>
-		<li>3D Pdf (1000)</li>
-		<li>X3D (1000)</li>
+	<preloader active="active" class="stat-preloader"></preloader>
+		<div class="statistics-content" ng-show="!active">
+			<h3>Repository statistics</h3>
+			<p>Number of objects: <span class="val">1222</span></p>
+			<p>Object types</p>
+			<ul>
+				<li>Images (1000)</li>
+				<li>3D Pdf (1000)</li>
+				<li>X3D (1000)</li>
 
-	</ul>
-	<p>Data collections</p>
-	<ul class="data-collections-list">
-		<li>Images (1000)</li>
-		<li>3D Pdf (1000)</li>
-		<li>X3D (1000)</li>
-	</ul>
+			</ul>
+			<p>Data collections</p>
+			<ul class="data-collections-list">
+				<li>Images (1000)</li>
+				<li>3D Pdf (1000)</li>
+				<li>X3D (1000)</li>
+			</ul>
+		</div>
+		
+	
 	
 
 </div>
