Adding facet module

--- a/app/scripts/controlls/templates/tools-select.tpl.html
+++ b/app/scripts/controlls/templates/tools-select.tpl.html
@@ -12,7 +12,7 @@
 	<div class="search-container" >
 	  <my-search></my-search>
 	  <div class="search-results">
-	    <preloader class="search-preloader"></preloader>
+	    <my-facets></my-facets>
 	    <my-pagination ></my-pagination>
 	    <div deckgrid class="deckgrid"  cardTemplate="scripts/deckgrid/template/card.tpl.html"></div>
 	  </div>
