--- a/app/styles/collections.css
+++ b/app/styles/collections.css
@@ -32,6 +32,11 @@
 	cursor: pointer;
 }
 
+.collections-container span:hover{
+  background-color: #2d3956;
+
+}
+
 
 .collections-container .image-container {
 	padding:0;
@@ -58,16 +63,17 @@
 .collections-container  .item-icons {
 	position: absolute;
 	top: 2px;
-	right: 3px;
+	right: 1px;
 	width: 20px;
 	height: 44px;
 }
 
 .collections-container  .item-icons span{
-	width: 14px;
-	height: 14px;
+	width: 12px;
+	height: 12px;
 	display: inline-block;
 	cursor: pointer;
+	padding: 4px 3px 3px 4px;
 	margin-bottom: 2px;
 }
 
@@ -81,17 +87,9 @@
 	font-size: 12px;
 }
 
-.item-icons .icon-delete:hover:before{
-	color: #C0C0C0;
-	
-}
-.item-icons .icon-details:hover:before{
-	color: #C0C0C0;
-	
-}
+
 
 .collections-container .icon-save:hover:before {
-	color: #C0C0C0;
 		font-size: 14px;
 
 }
@@ -109,9 +107,6 @@
 	font-size: 14px;
 }
 
-.collections-container .icon-clear:hover:before{
-	color: #C0C0C0;
-}
 
 
 .my-dialog{
@@ -212,10 +207,6 @@
 	line-height: 20px;
 	margin-right: 5px;
 
-}
-
-.collection-dialog .button:hover{
-	color: #C0C0C0;
 }
 
 
