Listing available annotations

--- a/app/scripts/annotations/templates/annotations.tpl.html
+++ b/app/scripts/annotations/templates/annotations.tpl.html
@@ -7,8 +7,8 @@
     <span ng-class="(!annotateMode) ? 'my-icon icon-list active' : 'my-icon icon-list'" title="Show available annotations" ng-click="annotateMode = false;"></span>
   </div>
 	<my-crop imsource="imageSource" imageh="imageh" ng-show="annotateMode"></my-crop>
-  <my-list-annotations ng-show="!annotateMode"></my-list-annotations>
-	<div ng-show="objectLoaded" class="annotation-form">
+  <my-list-annotations imsource="imageSource" imageh="imageh" docid="docID" list="annotationsList" ng-show="!annotateMode"></my-list-annotations>
+	<div ng-show="objectLoaded && annotateMode" class="annotation-form">
 		<my-dialog ng-show="dialogActive"  type="dialogType" text="dialogText" ></my-dialog>		
 		<p>Annotation title</p>
 		<input ng-model="annotation.title" type="text">
