--- a/app/scripts/annotations/templates/list.tpl.html
+++ b/app/scripts/annotations/templates/list.tpl.html
@@ -1,15 +1,19 @@
 <div class="annotations-list-container">
   <div>
   <img ng-src="{{imageSource}}" width="350" />
-    <span ng-click="selectAnnotation(item)" ng-repeat="item in list" ng-style="{top: {{ item.center.top }} + 'px', left: {{ item.center.left }} + 'px'}"></span>
+    <div>
+      <span ng-click="selectAnnotation(item)" ng-repeat="item in list" ng-style="{top: {{ item.center.top }} + 'px', left: {{ item.center.left }} + 'px'}"></span>
 
+    </div>
+
+    <div class="annotation-marker" ng-show="annotationSelected"></div>
   </div>
-  <div class="annotation-marker"  ng-show="annotationSelected"></div>
+
 
   <div class="annotation-list-description"  ng-show="annotationSelected">
        <p>Annotation title</p>
       {{title}}
       <p>Annotation text</p>
       {{description}}
-   </div>
+  </div>
 </div>
