Adding event listeners to barchart

--- a/app/scripts/statistics/templates/statistics.tpl.html
+++ b/app/scripts/statistics/templates/statistics.tpl.html
@@ -8,7 +8,7 @@
         <span  title="Repository history" ng-click="setContent('graph');" ng-class="(graphActive) ? 'myicon icon-graph active' : 'myicon icon-graph'"></span>
 
       </div>
-      <my-barchart ng-show="barchartActive" bartitle="Number of uploaded objects per time interval"></my-barchart>
+      <my-barchart ng-show="barchartActive" bartitle="Number of uploaded objects per month"></my-barchart>
 			
 			<div ng-show="statActive">
 				<p>Number of objects: <span class="val">{{ stats.numberOfObjects }}</span></p>
