Fixing dropdown animation

--- a/app/scripts/controlls/templates/tools-select.tpl.html
+++ b/app/scripts/controlls/templates/tools-select.tpl.html
@@ -10,16 +10,15 @@
 
 <div class="tools-container">
 	<div class="search-container" >
-	  <my-search></my-search>
+	  <!--<my-search></my-search>
 	  <div class="search-results">
       <search-history></search-history>
 	    <my-facets></my-facets>
 	    <my-pagination ></my-pagination>
 	    <div deckgrid class="deckgrid"  cardTemplate="scripts/deckgrid/template/card.tpl.html"></div>
-	  </div>
+	  </div>-->
 	</div>
-	<div ng-repeat="tool in tools" ng-include="tool.template">
+	<!--<div ng-repeat="tool in tools" ng-include="tool.template">
 		
-	</div>
-	
+	</div>-->
 </div>
